Refactor code that gave warnings